--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <h2 class="logo">Porfo<span>lio</span></h2>
                 <ul>
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="html/video.html">Video</a></li>
                     <li><a href="html/Blog.html">Blog</a></li>
                     <li><a href="html/porfolio.html">Porfolio</a></li>
